Bug 165621 - When you try to edit a cell, the text in the cell disappears
Summary: When you try to edit a cell, the text in the cell disappears
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium major
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
: 165825 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-07 01:12 UTC by nobu
Modified: 2025-05-07 13:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-03-07 01:12:26 UTC
Description:
When you try to edit a cell, the text in the cell disappears.

Steps to Reproduce:
1. Open new calc.
2. Insert "AAA" in Cell [A1].
3.  Place the cursor in the [A1] cell and press [F2].

Actual Results:
4.  The text in Cell [A1] disappears.

Expected Results:
4.  Text is visible.


Reproducible: Always


User Profile Reset: No

Additional Info:

When you enter a formula for the first time, the first "=" is invisible and becomes visible when you enter the second character.

This happens with the latest masters. I don't think there has been such a thing until recently.

---
Not Reproduced with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12c1596b0fd152399bed90f3d26014a32efc24e3
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Reproducible with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e79e12484f5a7ec20e48233a2b5b60d7bd8b54ab
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 1 m_a_riosv 2025-03-07 01:41:09 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e79e12484f5a7ec20e48233a2b5b60d7bd8b54ab
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-GB
Calc: CL threaded
Comment 2 Buovjaga 2025-03-07 07:42:24 UTC
Bibisected with linux-64-25.8 to 9b4dac8bf180f3fd5441b447a60439fb258854d4
Avoid short blinking of text when activating TextEdit
Comment 3 Armin Le Grand (collabora) 2025-03-10 16:20:24 UTC
Yes, sorry, that change to EditEngine/Outliner activation stuff had side-effects. That stuff is closely coupled and always hard to guarantee no side effects. on it...
Comment 4 Armin Le Grand (collabora) 2025-03-12 15:16:35 UTC
Fix on gerrit, see https://gerrit.libreoffice.org/c/core/+/182834. Found a simple way to fif for now (after some experimenting), see commit comment. Other places that used flushOverlayManager() checked, but work on their own, so we do not need to bring that OverlayManager flush back.
Comment 5 Commit Notification 2025-03-13 14:02:14 UTC
Armin Le Grand (allotropia) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f007d20a0a4224cab3e6ebb4a3083c0a579efa65

tdf#165621 fix Calc repaint on TextEdit activation

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Armin Le Grand (collabora) 2025-03-13 14:02:22 UTC
Had to change due to a UnitTest, so back to flush() at OverlayManager. Checked on Win and Linux, should be done.
Comment 7 Buovjaga 2025-03-13 18:26:55 UTC
Verified, thanks

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 816a4ede2cfefbe58e39fcc683cfb328ce8ecd08
CPU threads: 8; OS: Linux 6.13; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 13 March 2025
Comment 8 m_a_riosv 2025-03-17 10:07:21 UTC
Verified, thank Armin.
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f8a08b2515342e6ef9d91865bb5262640f81703f
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-GB
Calc: CL threaded
Comment 9 Buovjaga 2025-03-19 18:47:22 UTC
*** Bug 165825 has been marked as a duplicate of this bug. ***
Comment 10 Armin Le Grand (collabora) 2025-05-07 13:10:00 UTC
Note: Things changed with https://gerrit.libreoffice.org/c/core/+/184830 (f678ec9a65c4d7ae2d4dda4599a06fc4b66a27d8) in master, you might have a 2nd look - I did, for me it's okay. but better have more eyes on it...