tdf#165621 fix Calc repaint on TextEdit activation

Found a simple way to do that (after some experimenting),
needed to trigger the Overlay update, and that can just be
done with a Reschedule. Other places that used
flushOverlayManager() checked, but work on their own, so
we do not need to bring that OverlayManager flush back.

Unfortunately this triggers CppunitTest_desktop_lib
"DesktopLOKTest::testRedlineCalc", probably due to not
only the timer triggering but 'other' stuff that better
runs later (...?). Not doing it - as long as we need
to do it - is safer, but forces to keep that flush just
for this single usage.

Change-Id: Iacf18d688597129baba6e893252487d73a1fdfff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182834
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
(cherry picked from commit f007d20a0a4224cab3e6ebb4a3083c0a579efa65)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182871
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>